--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>asd</title>
+    <title>智慧幼儿园</title>
+    <link rel="icon" type="image/x-icon" href="./static/images/baby.png">
   </head>
   <body>
     <div id="app"></div>
